# iqp-boost

./: .gitignore  README.md  demo_shapes.py  main.py  main_blobs.py  main_gaussian.py  main_parity.py  main_shapes.py  pyproject.toml
configs/: experiments.example.json
configs/benchmark_full_2d_d1/: blobs_4x4_grid.json  dwave_3x4_pca_grid.json  dwave_3x4_umap_grid.json  dwave_3x4_vmi_grid.json  dwave_4x4_pca_grid.json  dwave_4x4_umap_grid.json  dwave_4x4_vmi_grid.json  genomic_3x4_pca_grid.json  genomic_3x4_umap_grid.json  genomic_3x4_vmi_grid.json  genomic_4x4_pca_grid.json  genomic_4x4_umap_grid.json  genomic_4x4_vmi_grid.json  ising_3x4_grid.json  ising_4x4_grid.json  noisy_bas_4x4_grid.json  noisy_bas_4x5_grid.json  pennylane_hm_3x4_grid.json  pennylane_hm_4x4_grid.json  qaoa_12q_grid.json  qaoa_8q_grid.json  random_circuit_12q_grid.json  scale_free_3x4_pca_grid.json  scale_free_3x4_umap_grid.json  scale_free_3x4_vmi_grid.json  scale_free_4x4_pca_grid.json  scale_free_4x4_umap_grid.json  scale_free_4x4_vmi_grid.json  tfim_12q_grid.json  tfim_8q_grid.json
configs/benchmark_full_2d_d2/: blobs_4x4_grid.json  dwave_3x4_pca_grid.json  dwave_3x4_umap_grid.json  dwave_3x4_vmi_grid.json  dwave_4x4_pca_grid.json  dwave_4x4_umap_grid.json  dwave_4x4_vmi_grid.json  (+23 more)
data/: shapes_5x5.npy
scripts/: print_grid_summary.py  report_dataset_specs.py
src/: core.py  dual_mmd_loss.py  ensemble.py  experiment_cli.py  experiment_factory.py  loss.py  reporting.py  runner.py  sigma_heuristics.py  utils.py
tests/: test_bipartite_graph_dataset.py  test_graph_isomorphism_dataset.py
(+287 files in other folders)
