[project]
name = "iqp-boost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iqpopt",
    "jax>=0.10.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pennylane>=0.44.0",
    "scikit-learn>=1.8.0",
]

[tool.uv.workspace]
members = [
    "iqpopt",
]

[tool.uv.sources]
iqpopt = { workspace = true }
